{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 33,
  "lineage": "c4afc262-599e-d4f5-bb7c-02c2f16ded0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom-eip-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004389795193cc742",
            "arn": "arn:aws:ec2:us-east-1:637423330145:elastic-ip/eipalloc-004389795193cc742",
            "domain": "vpc",
            "id": "eipalloc-004389795193cc742",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-64-252.compute-1.amazonaws.com",
            "public_ip": "3.211.64.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom-igw-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:internet-gateway/igw-06bad5e2144a4e36f",
            "id": "igw-06bad5e2144a4e36f",
            "owner_id": "637423330145",
            "tags": {
              "Name": "custom-igw-for-vpc"
            },
            "tags_all": {
              "Name": "custom-igw-for-vpc"
            },
            "vpc_id": "vpc-0721a2521f542bb54"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom-nat-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004389795193cc742",
            "association_id": "eipassoc-09be430b43e422d66",
            "connectivity_type": "public",
            "id": "nat-0ac33cd4729f3378a",
            "network_interface_id": "eni-0a52c8403172d1936",
            "private_ip": "192.168.1.152",
            "public_ip": "3.211.64.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089b128d9db76a534",
            "tags": {
              "Name": "custom-nat-for-vpc"
            },
            "tags_all": {
              "Name": "custom-nat-for-vpc"
            }
          },
          "dependencies": [
            "aws_eip.custom-eip-for-vpc",
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_subnet.pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom-default-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:route-table/rtb-0e501888a35e72fc3",
            "id": "rtb-0e501888a35e72fc3",
            "owner_id": "637423330145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bad5e2144a4e36f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-default-rt"
            },
            "tags_all": {
              "Name": "custom-default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0721a2521f542bb54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom-pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:route-table/rtb-035ed62f8ba601645",
            "id": "rtb-035ed62f8ba601645",
            "owner_id": "637423330145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac33cd4729f3378a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-nat-rt"
            },
            "tags_all": {
              "Name": "custom-nat-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0721a2521f542bb54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.custom-eip-for-vpc",
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_nat_gateway.custom-nat-for-vpc",
            "aws_subnet.pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-nat-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308122af84107fda",
            "route_table_id": "rtb-035ed62f8ba601645",
            "subnet_id": "subnet-0d26f2b4d06776157"
          },
          "dependencies": [
            "aws_eip.custom-eip-for-vpc",
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_nat_gateway.custom-nat-for-vpc",
            "aws_route_table.custom-pri-rt",
            "aws_subnet.pri-subnet",
            "aws_subnet.pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045844aa0bb5cce44",
            "route_table_id": "rtb-0e501888a35e72fc3",
            "subnet_id": "subnet-089b128d9db76a534"
          },
          "dependencies": [
            "aws_internet_gateway.custom-igw-for-vpc",
            "aws_route_table.custom-default-rt",
            "aws_subnet.pub-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:subnet/subnet-0d26f2b4d06776157",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d26f2b4d06776157",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423330145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-private-subnet"
            },
            "tags_all": {
              "Name": "custom-private-subnet"
            },
            "vpc_id": "vpc-0721a2521f542bb54"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:subnet/subnet-089b128d9db76a534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b128d9db76a534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423330145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-public-subnet"
            },
            "tags_all": {
              "Name": "custom-public-subnet"
            },
            "vpc_id": "vpc-0721a2521f542bb54"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:vpc/vpc-0721a2521f542bb54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-00f3abbde67273073",
            "default_route_table_id": "rtb-070c98b7e23dd3309",
            "default_security_group_id": "sg-057ec39e013415c32",
            "dhcp_options_id": "dopt-08f3fa9529b15565c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0721a2521f542bb54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070c98b7e23dd3309",
            "owner_id": "637423330145",
            "tags": {
              "Name": "custom-vpc-created-by-tf"
            },
            "tags_all": {
              "Name": "custom-vpc-created-by-tf"
            }
          }
        }
      ]
    }
  ]
}